@@ -6,6 +6,7 @@ Revision history for {{$dist->name}}
     - Breaking: RPC client will unwrap the extra 'response' level from the response.
     - Myriad now has run_future like shutdown_future, to tell when the framework is running.
     - Test::Myriad has a ready sub, to tell when the underlying Myriad is running.
+    - Batch will now throw an exception and fail if the developer didn't return arrayref.
 
     [Bugs fixed]
     - Having multiple RPC added will not block and wait each others from reading from stream.
